--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,25 +1,23 @@
 {
   "cSpell.words": [
-    "Activador",
-    "actívalo",
     "bordercolor",
     "borderwidth",
-    "darkcolor",
-    "gdown",
     "GITHUB",
     "imagenes",
     "ltsc",
     "LTSC",
     "mklink",
     "OSPPREARM",
-    "progressbar",
     "reactivador",
+    "REACTIVADOR",
+    "reactivator",
     "RICKYTO",
+    "schtasks",
     "selectbackground",
     "selectforeground",
     "takefocus",
     "taskkill",
-    "troughcolor",
+    "windll",
     "winshell",
     "yscrollcommand"
   ]
